--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
           </ng-container>
         </ul>
       <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-         <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+         <a class="dropdown-toggle text-light" dropdownToggle>welcome {{user}}</a>
          <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
@@ -26,7 +26,7 @@
       <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="d-flex float-right" (ngSubmit)="login()" autocomplete="off">
         <input name="username" [(ngModel)]="model.username" class="form-control mr-2" type="text" placeholder="Username">
         <input name="password" [(ngModel)]="model.password" class="form-control mr-2" type="password" placeholder="Password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
     </div>
   </div>
