--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,8 +15,8 @@
             </li>
           </ng-container>
         </ul>
-      <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-         <a class="dropdown-toggle text-light" dropdownToggle>welcome {{user}}</a>
+      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+         <a class="dropdown-toggle text-light" dropdownToggle style="text-decoration: none;">welcome {{user.userName | titlecase}}</a>
          <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
